out.txt
Defaulting to user installation because normal site-packages is not writeable
Obtaining file:///home/lor3ny/dev/fast-viterbi
  Installing build dependencies: started
  Installing build dependencies: finished with status 'done'
  Checking if build backend supports build_editable: started
  Checking if build backend supports build_editable: finished with status 'done'
  Getting requirements to build editable: started
  Getting requirements to build editable: finished with status 'done'
  Installing backend dependencies: started
  Installing backend dependencies: finished with status 'done'
  Preparing editable metadata (pyproject.toml): started
  Preparing editable metadata (pyproject.toml): finished with status 'done'
Requirement already satisfied: numpy in /home/lor3ny/.local/lib/python3.14/site-packages (from tensor-viterbi==0.1.0) (2.4.2)
Requirement already satisfied: deprecated in /home/lor3ny/.local/lib/python3.14/site-packages (from tensor-viterbi==0.1.0) (1.3.1)
Requirement already satisfied: wrapt<3,>=1.10 in /home/lor3ny/.local/lib/python3.14/site-packages (from deprecated->tensor-viterbi==0.1.0) (2.1.2)
Building wheels for collected packages: tensor-viterbi
  Building editable for tensor-viterbi (pyproject.toml): started
  Building editable for tensor-viterbi (pyproject.toml): finished with status 'error'
Failed to build tensor-viterbi
  error: subprocess-exited-with-error
  
  × Building editable for tensor-viterbi (pyproject.toml) did not run successfully.
  │ exit code: 1
  ╰─> [125 lines of output]
      *** scikit-build-core 0.12.2 using CMake 3.31.11 (editable)
      *** Configuring CMake...
      loading initial cache file /tmp/tmpvulw143x/build/CMakeInit.txt
      CMake Warning (dev) at CMakeLists.txt:24:
        Syntax Warning in cmake code at column 84
      
        Argument not separated from preceding token by whitespace.
      This warning is for project developers.  Use -Wno-dev to suppress it.
      
      -- The CXX compiler identification is GNU 15.2.1
      CMake Error at /usr/share/cmake/Modules/CMakeDetermineCompilerId.cmake:866 (message):
        Compiling the CUDA compiler identification source file
        "CMakeCUDACompilerId.cu" failed.
      
        Compiler: /usr/local/cuda/bin/nvcc
      
        Build flags:
      
        Id flags: --keep;--keep-dir;tmp -v
      
      
      
        The output was:
      
        2
      
        #$ _NVVM_BRANCH_=nvvm
      
        #$ _SPACE_=
      
        #$ _CUDART_=cudart
      
        #$ _HERE_=/usr/local/cuda/bin
      
        #$ _THERE_=/usr/local/cuda/bin
      
        #$ _TARGET_SIZE_=
      
        #$ _TARGET_DIR_=
      
        #$ _TARGET_DIR_=targets/x86_64-linux
      
        #$ TOP=/usr/local/cuda/bin/..
      
        #$ CICC_PATH=/usr/local/cuda/bin/../nvvm/bin
      
        #$ NVVMIR_LIBRARY_DIR=/usr/local/cuda/bin/../nvvm/libdevice
      
        #$ LD_LIBRARY_PATH=/usr/local/cuda/bin/../lib:
      
        #$
        PATH=/usr/local/cuda/bin/../nvvm/bin:/usr/local/cuda/bin:/tmp/pip-build-env-ud8od76d/overlay/bin:/tmp/pip-build-env-ud8od76d/normal/bin:/usr/local/cuda/bin:/home/lor3ny/.local/bin:/usr/share/Modules/bin:/usr/local/bin:/usr/bin:/var/lib/snapd/snap/bin
      
      
        #$ INCLUDES="-I/usr/local/cuda/bin/../targets/x86_64-linux/include"
      
        #$ SYSTEM_INCLUDES="-isystem"
        "/usr/local/cuda/bin/../targets/x86_64-linux/include/cccl"
      
        #$ LIBRARIES= "-L/usr/local/cuda/bin/../targets/x86_64-linux/lib/stubs"
        "-L/usr/local/cuda/bin/../targets/x86_64-linux/lib"
      
        #$ CUDAFE_FLAGS=
      
        #$ PTXAS_FLAGS=
      
        #$ rm tmp/a_dlink.reg.c
      
        #$ gcc -D__CUDA_ARCH_LIST__=750 -E -x c++ -D__CUDACC__ -D__NVCC__
        "-I/usr/local/cuda/bin/../targets/x86_64-linux/include" "-isystem"
        "/usr/local/cuda/bin/../targets/x86_64-linux/include/cccl"
        -D__CUDACC_VER_MAJOR__=13 -D__CUDACC_VER_MINOR__=1
        -D__CUDACC_VER_BUILD__=115 -D__CUDA_API_VER_MAJOR__=13
        -D__CUDA_API_VER_MINOR__=1 -D__NVCC_DIAG_PRAGMA_SUPPORT__=1
        -D__CUDACC_DEVICE_ATOMIC_BUILTINS__=1 -include "cuda_runtime.h" -m64
        "CMakeCUDACompilerId.cu" -o "tmp/CMakeCUDACompilerId.cpp4.ii"
      
        #$ cudafe++ --c++17 --static-host-stub --device-hidden-visibility
        --gnu_version=150201 --display_error_number --orig_src_file_name
        "CMakeCUDACompilerId.cu" --orig_src_path_name
        "/tmp/tmpvulw143x/build/CMakeFiles/3.31.11/CompilerIdCUDA/CMakeCUDACompilerId.cu"
        --allow_managed --m64 --parse_templates --gen_c_file_name
        "tmp/CMakeCUDACompilerId.cudafe1.cpp" --stub_file_name
        "CMakeCUDACompilerId.cudafe1.stub.c" --gen_module_id_file
        --module_id_file_name "tmp/CMakeCUDACompilerId.module_id"
        "tmp/CMakeCUDACompilerId.cpp4.ii"
      
        /usr/include/bits/mathcalls.h(206): error: exception specification is
        incompatible with that of previous function "rsqrt" (declared at line 629
        of
        /usr/local/cuda/bin/../targets/x86_64-linux/include/crt/math_functions.h)
      
          extern double rsqrt (double __x) noexcept (true); extern double __rsqrt (double __x) noexcept (true);
                                           ^
      
      
      
        /usr/include/bits/mathcalls.h(206): error: exception specification is
        incompatible with that of previous function "rsqrtf" (declared at line 653
        of
        /usr/local/cuda/bin/../targets/x86_64-linux/include/crt/math_functions.h)
      
          extern float rsqrtf (float __x) noexcept (true); extern float __rsqrtf (float __x) noexcept (true);
                                          ^
      
      
      
        2 errors detected in the compilation of "CMakeCUDACompilerId.cu".
      
        # --error 0x2 --
      
      
      
      
      
      Call Stack (most recent call first):
        /usr/share/cmake/Modules/CMakeDetermineCompilerId.cmake:8 (CMAKE_DETERMINE_COMPILER_ID_BUILD)
        /usr/share/cmake/Modules/CMakeDetermineCompilerId.cmake:53 (__determine_compiler_id_test)
        /usr/share/cmake/Modules/CMakeDetermineCUDACompiler.cmake:139 (CMAKE_DETERMINE_COMPILER_ID)
        CMakeLists.txt:2 (project)
      
      
      -- Configuring incomplete, errors occurred!
      
      *** CMake configuration failed
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
  ERROR: Failed building editable for tensor-viterbi
ERROR: Failed to build installable wheels for some pyproject.toml based projects (tensor-viterbi)
